remove reduce memory footprint option (default on now) and add hybrid compressor for MDR

--- a/src/mgard-x/DataRefactoring/MultiDimension/Decompose.cpp.in
+++ b/src/mgard-x/DataRefactoring/MultiDimension/Decompose.cpp.in
@@ -18,7 +18,7 @@ template void decompose<@NUM_DIM@, @DATA_TYPE@, @DEVICE_TYPE@>(
     SubArray<@NUM_DIM@, @DATA_TYPE@, @DEVICE_TYPE@> &v, 
     SubArray<@NUM_DIM@, @DATA_TYPE@, @DEVICE_TYPE@> w,
     SubArray<@NUM_DIM@, @DATA_TYPE@, @DEVICE_TYPE@> b,
-    int start_level, int stop_level, int queue_idx);
+    int start_level, int stop_level, bool orthogonal_projection, int queue_idx);
 
 } // namespace multi_dimension
 
